// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotebookMetadataComponent renders liked notebook 1`] = `
<Stack
  tokens={
    {
      "childrenGap": 10,
    }
  }
>
  <Stack
    horizontal={true}
    tokens={
      {
        "childrenGap": 30,
      }
    }
    verticalAlign="center"
  >
    <StackItem>
      <Text
        nowrap={true}
        variant="xxLarge"
      >
        name
      </Text>
    </StackItem>
    <StackItem>
      <Text>
        <CustomizedIconButton
          iconProps={
            {
              "iconName": "HeartFill",
            }
          }
        />
        0
         likes
      </Text>
    </StackItem>
    <StackItem>
      <CustomizedPrimaryButton
        text="Download"
      />
    </StackItem>
    <StackItem
      grow={true}
    />
    <StackItem>
      <InfoComponent />
    </StackItem>
  </Stack>
  <Stack
    horizontal={true}
    tokens={
      {
        "childrenGap": 10,
      }
    }
    verticalAlign="center"
  >
    <StyledPersonaBase
      imageUrl={false}
      size={11}
      text="author"
    />
    <Text>
      Invalid Date
    </Text>
    <Text>
      <Icon
        iconName="RedEye"
      />
       
      0
    </Text>
    <Text>
      <Icon
        iconName="Download"
      />
      0
    </Text>
  </Stack>
  <Text
    nowrap={true}
  >
    <span
      key="tag"
    >
      <StyledLinkBase
        onClick={[Function]}
      >
        tag
      </StyledLinkBase>
    </span>
  </Text>
  <Text
    styles={
      {
        "root": {
          "fontWeight": 600,
        },
      }
    }
    variant="large"
  >
    Description
  </Text>
  <Text>
    description
  </Text>
</Stack>
`;

exports[`NotebookMetadataComponent renders un-liked notebook 1`] = `
<Stack
  tokens={
    {
      "childrenGap": 10,
    }
  }
>
  <Stack
    horizontal={true}
    tokens={
      {
        "childrenGap": 30,
      }
    }
    verticalAlign="center"
  >
    <StackItem>
      <Text
        nowrap={true}
        variant="xxLarge"
      >
        name
      </Text>
    </StackItem>
    <StackItem>
      <Text>
        <CustomizedIconButton
          iconProps={
            {
              "iconName": "Heart",
            }
          }
        />
        0
         likes
      </Text>
    </StackItem>
    <StackItem>
      <CustomizedPrimaryButton
        text="Download"
      />
    </StackItem>
    <StackItem
      grow={true}
    />
    <StackItem>
      <InfoComponent />
    </StackItem>
  </Stack>
  <Stack
    horizontal={true}
    tokens={
      {
        "childrenGap": 10,
      }
    }
    verticalAlign="center"
  >
    <StyledPersonaBase
      imageUrl={false}
      size={11}
      text="author"
    />
    <Text>
      Invalid Date
    </Text>
    <Text>
      <Icon
        iconName="RedEye"
      />
       
      0
    </Text>
    <Text>
      <Icon
        iconName="Download"
      />
      0
    </Text>
  </Stack>
  <Text
    nowrap={true}
  >
    <span
      key="tag"
    >
      <StyledLinkBase
        onClick={[Function]}
      >
        tag
      </StyledLinkBase>
    </span>
  </Text>
  <Text
    styles={
      {
        "root": {
          "fontWeight": 600,
        },
      }
    }
    variant="large"
  >
    Description
  </Text>
  <Text>
    description
  </Text>
</Stack>
`;
